# wordpress-articles-list-generator

./: README.md  config.env  docker-compose.yaml
list-generator/: Dockerfile  app.py  pyproject.toml
list-generator/list_generator/: app.py
list-generator/tests/: test_list_generator.py
output/: articles_list_Mon_Apr_11_07:27:02_2022
