[tool.poetry]
name = "list-generator"
version = "0.1.0"
description = ""
authors = ["Zhima-Mochi"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
